fixed spacing active filters

--- a/src/components/search/ActiveFilters/ActiveFilters.module.scss
+++ b/src/components/search/ActiveFilters/ActiveFilters.module.scss
@@ -1,8 +1,10 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 1.5em;
 
   & > * {
     margin-right: 2em;
+    margin-bottom: 1em;
   }
 }
